...
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_below="@+id/subheader"
        android:layout_centerHorizontal="true"
        android:textColor="@color/white"
        android:background="@drawable/circle_button"
        android:id="@+id/buttonSignIn" />

    <Button
        android:text="Register"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
...
